platform/components/openbao-dev/install.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openbao
  labels:
    app.kubernetes.io/part-of: dabba
