platform/components/openbao-dev/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: openbao
  namespace: openbao
  annotations:
    cert-manager.io/cluster-issuer: "${cluster_issuer}"
spec:
  gatewayClassName: eg
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: https
      port: 443
      protocol: HTTPS
      hostname: bao.${domain}
      tls:
        mode: Terminate
        certificateRefs:
          - name: openbao-tls-ingress
            namespace: openbao
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openbao
  namespace: openbao
spec:
  parentRefs:
    - name: openbao
  hostnames:
    - bao.${domain}
  rules:
    - backendRefs:
        - name: openbao
          port: 8200
